<resources>
    <string name="app_name">Apm报表</string>

    <string name="action_ok">确定</string>
    <string name="action_edit">编辑</string>
    <string name="action_next">下一步</string>
    <string name="action_preview">预览</string>
    <string name="action_filter">过滤</string>

    <string name="memory">内存占用</string>
    <string name="pressing_key_time">按键响应时间</string>
    <string name="keyboard_hide">键盘收起</string>
    <string name="electric_current">电流</string>
    <string name="frame">帧率</string>
    <string name="cpu">CPU占用</string>

    <string name="setup_notice">
        "重要提示\n\n"

        "为了保证测试数据的精确性，在数据上报时将自动加上本设备的ID, 厂商和设备型号，系统版本号。"
        "请在实际测试的设备上安装本应用进行数据上报，或者在本机运行生成所有测试结果数据。\n\n"

        "设备信息:\n"
        "厂商: %s\n"
        "型号: %s\n"
        "设备ID: %s\n\n"
        "OS: %s\n"
        "版本: %s\n"
        "build: %s\n"
    </string>
    <string name="electric_current_offscreen">息屏电流</string>
    <string name="electric_current_average">5分钟平均电流</string>
    <string name="cpu_idle">空闲状态</string>
    <string name="cpu_medium">中等规格状态</string>
    <string name="cpu_long">中等长时间运行</string>
    <string name="frame_theme_slide">Theme页滑动</string>
    <string name="frame_emoji_slide">emoji页滑动</string>
    <string name="frame_switch_kb_symbol">主键盘与符号键盘切换</string>
    <string name="frame_switch_kb_emoji">主键盘与emoji键盘切换</string>
    <string name="frame_switch_kb_setting">键盘到设置页面</string>
    <string name="frame_switch_kb_typing">键盘打字弹泡</string>

    <string name="picker_checkbox_description" translatable="false">picker_checkbox_description</string>
    <string name="picker_avatar_description" translatable="false">picker_avatar_description</string>
    <string name="picker_title">title stub</string>
    <string name="picker_sub_title">sub title stub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">APM</string>
    <string name="nav_header_subtitle">App Performance Monitor</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_manual_add">手工数据收集</string>
    <string name="nav_manual_chart">手工数据报表</string>
    <string name="nav_manual_memory">手工内存消耗</string>

</resources>
