<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_memory"
        android:orderInCategory="100"
        android:title="@string/memory"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_key_time"
        android:orderInCategory="100"
        android:title="@string/pressing_key_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_keyboard_hide"
        android:orderInCategory="100"
        android:title="@string/keyboard_hide"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_electric_current"
        android:orderInCategory="100"
        android:title="@string/electric_current"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_frame"
        android:orderInCategory="100"
        android:title="@string/frame"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_cpu"
        android:orderInCategory="100"
        android:title="@string/cpu"
        app:showAsAction="never" />
</menu>
