<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:padding="10dp"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/action_add_memory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/memory"
        />
    <Button
        android:id="@+id/action_add_key_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/pressing_key_time"
        />
    <Button
        android:id="@+id/action_add_keyboard_hide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/keyboard_hide"
        />
    <Button
        android:id="@+id/action_add_electric_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/electric_current"
        />
    <Button
        android:id="@+id/action_add_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/frame"
        />
    <Button
        android:id="@+id/action_add_cpu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="36dp"
        android:layout_margin="6dp"
        android:text="@string/cpu"
        />
</LinearLayout>