<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/check_box"
        android:src="@mipmap/ic_uncheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:visibility="gone"
        android:contentDescription="@string/picker_checkbox_description" />

    <ImageView
        android:id="@+id/avatar_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_toRightOf="@id/check_box"
        android:layout_toEndOf="@id/check_box"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/picker_avatar_description" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/avatar_img"
        android:ellipsize="end"
        android:lineSpacingExtra="6dp"
        android:maxLines="1"
        android:text="@string/picker_title"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/avatar_img" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/avatar_img"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_below="@id/tv_title"
        android:text="@string/picker_sub_title"
        android:maxLines="1"
        android:textSize="14sp"
        android:layout_alignStart="@+id/tv_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/avatar_img"
        android:layout_marginTop="10dp"
        android:background="#edeff3"/>
</RelativeLayout>